# Fun-With-Flags-Demo

./: .gitignore  CONTRIBUTING.md  README.md
.devcontainer/: devcontainer.json
.devcontainer/beginner/: devcontainer.json
.devcontainer/expert/: devcontainer.json
.github/workflows/: ci.yml
go/: README.md  flags.json  go.mod  go.sum  integration_test.go  main.go  requests.http
go-chi/: README.md  flags.json  go.mod  go.sum  integration_test.go  main.go
go-chi/internal/flagd/: provider.go
go-chi/internal/hook/: custom.go
go-chi/internal/middleware/: language.go
java/: pom.xml
java-quarkus/: README.md  flags.json  pom.xml
java-spring/: README.md  flags.json  pom.xml
loadgen/: README.md  docker-compose.yaml
loadgen/k6/: script.js
node/: README.md  flags.json  package-lock.json  package.json  requests.http
node-express/: README.md  flags.json  package-lock.json  package.json
node-express/src/: index.js  middleware.js  openfeature.js  otel.js
node-express/test/: integration.test.js
node/src/: hook.js  index.js  openfeature.js
observability/: README.md  docker-compose.yaml
observability/dashboards/: feature-flags.json
python/: README.md  flags.json
python-fastapi/: README.md  flags.json  pyproject.toml  requests.http
python-fastapi/app/: main.py  metrics_hook.py  middleware.py  openfeature_setup.py  otel_setup.py
python-fastapi/tests/: test_integration.py
python/app/: hook.py  main.py  middleware.py  openfeature_setup.py
python/tests/: test_integration.py
quarkus/: README.md  flags.json  requests.http
(+19 files in other folders)
